# python-snakemake-template

./: .env  .gitignore  LICENSE  README.md  bootstrap.sh  conda-requirements-minimal.txt  conda-requirements-test.txt  hello_world.smk  pip-requirements.txt  pyproject.toml  setup.py
.github/: CODEOWNERS
.github/workflows/: check.yml  pythonpackage.yml
ci/: flake8.cfg  precommit.sh
dependencies/: dev.yml  toolkit.yml
docker/: Dockerfile
python/: ruff.toml
python/tests/: conftest.py
python/toolkit/lib/: path.py  snakemake_utils.py  utils.py
python/toolkit/tools/: example.py
scripts/: check.sh  docker.sh  mamba.sh  run_snakemake.sh
src/python/pyclient/: __init__.py
src/python/pyclient/core/: client_logging.py  logging.py
src/python/pyclient/pipeline/: snakemake_utils.py
src/python/pyclient/tests/: test_hello_world.py  util.py
src/python/pyclient/tools/: __main__.py  hello_world.py
src/python/pyclient/tools/tests/: __init__.py  test_main.py
src/scripts/: common.sh  run_snakemake.sh
src/snakemake/: hello_world.smk
tests/data/: basic_input.tsv
tests/integration/: test_main.yml
toolkit/: mypy.ini  pyproject.toml  ruff.toml
toolkit/tests/: test_example.py
toolkit/toolkit/: __init__.py  __main__.py
toolkit/toolkit/lib/: log.py  snakemake_utils.py
toolkit/toolkit/tools/: __init__.py
