[tool.poetry]
name = "toolkit"
version = "0.0.1"
description = "Tools and APIs for this Snakemake pipeline"
authors = ["Fulcrum Genomics <no-reply@fulcrumgenomics.com>"]
maintainers = ["Fulcrum Genomics <no-reply@fulcrumgenomics.com>"]
repository = "https://github.com/fulcrumgenomics/thisrepo.git"
classifiers = [
    "Environment :: Console",
    "Programming Language :: Python :: 3",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
]
packages = [{ include = "toolkit", from = "." }]

[tool.poetry.dependencies]
python = "^3.10"
defopt = "^6.4.0"
s3path = "^0.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[tool.poetry.scripts]
toolkit = "toolkit.__main__:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
